<resources>
    <string name="app_name">Ex4</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="btn_txt">Connect!</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="angle">Angle</string>
    <string name="distance">Distance</string>
    <string name="aileron"><![CDATA[<-Aileron->]]></string>
    <string name="elevator"><![CDATA[<-Elevator->]]></string>
    <string name="stickX">stickX</string>
    <string name="stickY">stickY</string>
    <string name="IP">10.0.0.2</string>
    <string name="Port">5402</string>
</resources>
