<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/angle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angle"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stickX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stickX"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stickY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stickY"
            android:textColor="#444444"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/image_button_bg" />

    <TextView
        android:id="@+id/aileron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_joystick"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="132dp"
        android:text="@string/aileron"

        android:textSize="@dimen/AileronAndElivatorSize" />

    <TextView
        android:id="@+id/elevator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginRight="-16dp"
        android:layout_toStartOf="@+id/layout_joystick"
        android:layout_toLeftOf="@+id/layout_joystick"
        android:rotation="90"
        android:text="@string/elevator"
        android:textSize="@dimen/AileronAndElivatorSize" />
</RelativeLayout>
